added header, nav and image

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,21 @@
-// Navigation code here
+header {
+    padding: 15px;
+    background-color: @wild-sand;
+    text-align: center;
+
+            nav {
+            text-decoration: none;
+            display: flex;
+            justify-content: space-around;
+            font-size: 1.7rem;
+            margin: 2% 20%;
+        }
+    }
+
+    h1 {
+        font-size: 3.4rem;
+    }
+
+.main-img {
+    border-radius: 3%;
+}
