--- a/less/home-page.less
+++ b/less/home-page.less
@@ -57,9 +57,16 @@
         margin-bottom: 26px;
       }
 
-      .btn {
-      }
+      button {
+        width: 95px;
+	      height: 35px;
+        margin: auto;
+        background-color: black;
+        color: white;
+        border-radius: 10px;
+        font-size: 20px;;
     }
+  }
 
     .walk-img {
       width: 46%;
