--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,10 @@
-// Mixins Here
+.display (@j) {
+    display: flex;
+    justify-content: @j;
+}
+
+.sizing (@w, @h) {
+    width: @w;
+    height: @h;
+}
+
