--- a/less/navigation.less
+++ b/less/navigation.less
@@ -5,8 +5,7 @@ header {
 
             nav {
             text-decoration: none;
-            display: flex;
-            justify-content: space-around;
+            .display (space-around);
             font-size: 1.7rem;
             margin: 2% 20%;
         }
