--- a/css/index.css
+++ b/css/index.css
@@ -240,6 +240,10 @@ footer {
   border-radius: 10px;
   font-size: 20px;
 }
+.home .walk .walk-text button button:hover {
+  color: aqua;
+  background-color: darkblue;
+}
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
