--- a/less/home-page.less
+++ b/less/home-page.less
@@ -43,8 +43,7 @@
     margin-top: 60px;
     border-top: 1px solid @main-border-color;
     padding: 50px 60px;
-    display: flex;
-    justify-content: center;
+    .display (center);
 
     .walk-text {
       width: 50%;
@@ -58,13 +57,17 @@
       }
 
       button {
-        width: 95px;
-	      height: 35px;
+        .sizing (95px, 35px,);
         margin: auto;
         background-color: black;
         color: white;
         border-radius: 10px;
-        font-size: 20px;;
+        font-size: 20px;
+
+          button:hover {
+            color: aqua;
+            background-color: darkblue;
+        }
     }
   }
 
