--- a/less/home-page.less
+++ b/less/home-page.less
@@ -59,17 +59,15 @@
       button {
         .sizing (95px, 35px,);
         margin: auto;
-        background-color: black;
-        color: white;
+        .color (black, white);
         border-radius: 10px;
         font-size: 20px;
-
-          button:hover {
-            color: aqua;
-            background-color: darkblue;
-        }
+      }
+      button:hover {
+        .color (darkblue, aqua);
     }
   }
+
 
     .walk-img {
       width: 46%;
