--- a/less/home-page.less
+++ b/less/home-page.less
@@ -20,10 +20,9 @@
     width: 100%;
 
     img {
-      width: 28%;
+      .sizing (28%, 100%);
       margin: 20px 2.5%;
       border-radius: 20px;
-      height: 100%;
     }
   }
 
@@ -74,8 +73,7 @@
       margin-left: 4%;
       
       img {
-        width: 100%;
-        height: auto;
+        .sizing (100%, auto);
         border-radius: 10px;
       }
     }
