--- a/css/index.css
+++ b/css/index.css
@@ -253,3 +253,22 @@ footer {
   height: auto;
   border-radius: 10px;
 }
+@media ( max-width: 500px) {
+  .space-images {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    max-width: 100%;
+  }
+  .sky {
+    display: none;
+    visibility: hidden;
+  }
+  .launch {
+    display: none;
+    visibility: hidden;
+  }
+  .walk {
+    flex-direction: column-reverse;
+  }
+}
