answered read me questions

--- a/css/index.css
+++ b/css/index.css
@@ -254,11 +254,17 @@ footer {
   border-radius: 10px;
 }
 @media ( max-width: 500px) {
-  .space-images {
+  nav {
     display: flex;
-    flex-wrap: nowrap;
+    justify-content: space-evenly;
+  }
+  .main-img {
+    width: 100%;
+  }
+  .space-images {
     justify-content: center;
     max-width: 100%;
+    margin: auto;
   }
   .sky {
     display: none;
@@ -269,6 +275,7 @@ footer {
     visibility: hidden;
   }
   .walk {
+    align-items: center;
     flex-direction: column-reverse;
   }
 }
