--- a/less/home-page.less
+++ b/less/home-page.less
@@ -83,9 +83,12 @@
 
 @media @mobile {
 
-  nav {
-    display: flex;
-    justify-content: space-evenly;
+  header {
+    justify-content: space-between;
+     
+    nav {
+       margin: 4% auto 0;
+     }
   }
 
   .main-img {
@@ -111,8 +114,7 @@
   .walk {
     align-items: center;
     flex-direction: column-reverse;
-    
-  }
+    }
 
 }
   
