--- a/css/index.css
+++ b/css/index.css
@@ -206,6 +206,12 @@ footer {
   margin: 20px 2.5%;
   border-radius: 20px;
 }
+@media ( max-width: 500px) {
+  .home .space-images img {
+    width: 100%;
+    height: 100%;
+  }
+}
 .home .visit-planets {
   padding: 15px;
 }
@@ -222,6 +228,12 @@ footer {
   display: flex;
   justify-content: center;
 }
+@media ( max-width: 500px) {
+  .home .walk {
+    padding: 15px;
+    margin: 0 auto;
+  }
+}
 .home .walk .walk-text {
   width: 50%;
 }
@@ -230,6 +242,12 @@ footer {
 }
 .home .walk .walk-text p {
   margin-bottom: 26px;
+}
+@media ( max-width: 500px) {
+  .home .walk .walk-text {
+    width: 100%;
+    padding: 15px;
+  }
 }
 .home .walk .walk-text button {
   width: 95px;
@@ -240,18 +258,31 @@ footer {
   border-radius: 10px;
   font-size: 20px;
 }
+@media ( max-width: 500px) {
+  .home .walk .walk-text button {
+    width: 100%;
+  }
+}
 .home .walk .walk-text button:hover {
   background-color: darkblue;
   color: aqua;
 }
 .home .walk .walk-img {
-  width: 46%;
+  width: 100%;
   margin-left: 4%;
 }
 .home .walk .walk-img img {
   width: 100%;
   height: auto;
   border-radius: 10px;
+}
+@media ( max-width: 500px) {
+  .home .walk .walk-img img {
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    margin: 0 auto;
+  }
 }
 @media ( max-width: 500px) {
   header {
@@ -265,8 +296,9 @@ footer {
   }
   .space-images {
     justify-content: center;
-    max-width: 100%;
-    margin: auto;
+    width: 100%;
+    height: auto;
+    margin: 0 auto;
   }
   .sky {
     display: none;
@@ -276,8 +308,18 @@ footer {
     display: none;
     visibility: hidden;
   }
+  .blast {
+    width: 50%;
+    height: auto;
+    margin: 0 auto;
+  }
   .walk {
     align-items: center;
     flex-direction: column-reverse;
+  }
+  .walk-text {
+    width: 100%;
+    padding: 15px;
+    margin: auto;
   }
 }
