--- a/less/home-page.less
+++ b/less/home-page.less
@@ -20,10 +20,15 @@
     width: 100%;
 
     img {
-      .sizing (28%, 100%);
+      .sizing(28%, 100%);
       margin: 20px 2.5%;
       border-radius: 20px;
+
+      @media @mobile {
+        .sizing(100%, 100%);
+      }
     }
+
   }
 
   .visit-planets {
@@ -42,7 +47,12 @@
     margin-top: 60px;
     border-top: 1px solid @main-border-color;
     padding: 50px 60px;
-    .display (center);
+    .display(center);
+
+    @media @mobile {
+      padding: 15px;
+      margin: 0 auto;
+    }
 
     .walk-text {
       width: 50%;
@@ -55,27 +65,42 @@
         margin-bottom: 26px;
       }
 
+      @media @mobile {
+        width: 100%;
+        padding: 15px;
+      }
+
       button {
-        .sizing (95px, 35px,);
+        .sizing(95px, 35px,);
         margin: auto;
-        .color (black, white);
+        .color(black, white);
         border-radius: 10px;
         font-size: 20px;
+
+        @media @mobile {
+          width: 100%;
+        }
       }
       button:hover {
-        .color (darkblue, aqua);
+        .color(darkblue, aqua);
     }
+
   }
 
 
     .walk-img {
-      width: 46%;
+      width: 100%;
       margin-left: 4%;
       
       img {
-        .sizing (100%, auto);
+        .sizing(100%, auto);
         border-radius: 10px;
-      
+
+        @media @mobile {
+          .sizing(100%, 100%);
+          align-items: center;
+          margin: 0 auto;
+        }
       }
     }
   }
@@ -89,7 +114,7 @@
     nav {
        margin: 4% auto 0;
      }
-  }
+  }  
 
   .main-img {
     width: 100%;
@@ -97,8 +122,9 @@
 
   .space-images {
     justify-content: center;
-    max-width: 100%;
-    margin: auto;
+    width: 100%;
+    height: auto;
+    margin: 0 auto;
   }
 
   .sky {
@@ -111,10 +137,21 @@
 		visibility: hidden;
   }
 
+  .blast {
+    .sizing(50%, auto);
+    margin: 0 auto;
+  }
+
   .walk {
     align-items: center;
     flex-direction: column-reverse;
     }
 
+    .walk-text {
+      width: 100%;
+      padding: 15px;
+      margin: auto;
+    }
+  
 }
   
